Added Virginia's songs

--- a/lab2/groupname-lab2-part1.html
+++ b/lab2/groupname-lab2-part1.html
@@ -2,5 +2,30 @@
 <html>
 <body>
 
+  <title>Playlist of Ten Favorite Songs</title>
+  <h1>Playlist of Ten Favorite Songs</h1>
+
+  <div class ="song">
+    <ul>
+      <li>Track Name: "If You're Too Shy (Let Me Know)"</li>
+      <li>Artist: <a href="https://the1975.com/">the 1975</a></li>
+      <li>Album: <a href="https://www.allmusic.com/album/notes-on-a-conditional-form-mw0003328609">Notes on a Conditional Form</a></li>
+      <img src="images/NotesOnAConditionalForm.jpg" alt="Album Cover" width="75" height="75">
+      <li>Release Date: May 22, 2020</li>
+      <li>Genre(s): Pop; Rock; Electronic Pop; Dance</li>
+    </ul>
+  </div>
+
+  <div class ="song">
+    <ul>
+      <li>Track Name: "Collar Full"</li>
+      <li>Artist: <a href="https://panicatthedisco.com/">Panic! at the Disco</a></li>
+      <li>Album: <a href="https://www.allmusic.com/album/too-weird-to-live-too-rare-to-die%21-mw0002565550/releases">Too Weird to Live, Too Rare to Die!</a></li>
+      <img src="images/TooWeirdToLive.jpg" alt="Album Cover" width="75" height="75">
+      <li>Release Date: October 8, 2013</li>
+      <li>Alternative; Indie</li>
+    </ul>
+  </div>
+
 </body>
 </html>
