Added audio files to part 3

--- a/lab2/contentcreators-lab2-part3.html
+++ b/lab2/contentcreators-lab2-part3.html
@@ -18,6 +18,7 @@
       <h3 id="release_date">Release Date</h3>
       <h3 id="genres">Genres</h3>
       <h3 id="album_cover">Album Cover</h3>
+      <h3 id="audio">Audio</h3>
     </div>
 
     <div class="song">
@@ -34,6 +35,9 @@
         </ul>
       </div>
       <div class="album_cover"><img src="images/NotesOnAConditionalForm.jpg" alt="Album Cover"></div>
+      <div class="audio"><audio controls>
+        <source src="audio/IfYoureTooShy.mp3">
+      </audio></div>
     </div>
 
     <div class="song">
@@ -48,6 +52,9 @@
         </ul>
       </div>
       <div class="album_cover"><img src="images/TooWeirdToLive.jpg" alt="Album Cover"></div>
+      <div class="audio"><audio controls>
+        <source src="audio/CollarFull.mp3">
+      </audio></div>
     </div>
 
     <div id="end">end of list</div>
