Updated part1, 2, 3, and added album images

--- a/lab2/contentcreators-lab2-part3.html
+++ b/lab2/contentcreators-lab2-part3.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="song">
-      <div class="track">"Collar Full"</div>
+      <div class="track" id="favorite_song">"Collar Full"</div>
       <div class="artist"> <a href="https://panicatthedisco.com/">Panic! at the Disco</a></div>
       <div class="album_name"><a href="https://www.allmusic.com/album/too-weird-to-live-too-rare-to-die%21-mw0002565550/releases">Too Weird to Live, Too Rare to Die!</a></div>
       <div class="release_date">October 8, 2013</div>
@@ -52,10 +52,38 @@
         </ul>
       </div>
       <div class="album_cover"><img src="images/TooWeirdToLive.jpg" alt="Album Cover"></div>
-      <div class="audio"><audio controls>
-        <source src="audio/CollarFull.mp3">
-      </audio></div>
+      <div class="audio">
+        <audio controls>
+          <source src="audio/CollarFull.mp3">
+        </audio>
+      </div>
     </div>
+
+    <div class = "song">
+      <div class="track" id=favorite_song>"Trouble"</div>
+      <div class="artist"> <a href="https://www.coldplay.com/">Coldplay</a></div>
+      <div class="album_name">
+        <a href="https://www.allmusic.com/album/parachutes-mw0000101998">
+          Parachutes
+        </a>
+      </div>
+      <div class="release_date">
+        July 10, 2000
+      </div>
+      <div class="genres">
+        <ul>
+          <li>Pop</li>
+          <li>Rock</li>
+        </ul>
+      </div>
+      <div class="album_cover"><img src="images/Parachutes.jpg" alt="Album Cover"></div>
+      <div class="audio">
+        <audio controls>
+          <source src="">
+        </audio>
+      </div>
+    </div>
+  
 
     <div id="end">end of list</div>
   </div>
