--- a/lab2/groupname-lab2-part1.html
+++ b/lab2/groupname-lab2-part1.html
@@ -20,10 +20,44 @@
     <ul>
       <li>Track Name: "Collar Full"</li>
       <li>Artist: <a href="https://panicatthedisco.com/">Panic! at the Disco</a></li>
-      <li>Album: <a href="https://www.allmusic.com/album/too-weird-to-live-too-rare-to-die%21-mw0002565550/releases">Too Weird to Live, Too Rare to Die!</a></li>
+      <li>
+        Album: <a href="https://www.allmusic.com/album/too-weird-to-live-too-rare-to-die%21-mw0002565550/releases">
+          Too Weird to Live, Too Rare to Die!
+        </a>
+      </li>
       <img src="images/TooWeirdToLive.jpg" alt="Album Cover" width="75" height="75">
       <li>Release Date: October 8, 2013</li>
       <li>Alternative; Indie</li>
+    </ul>
+  </div>
+
+  <div class = "song">
+    <ul>
+      <li>Track Name: "Trouble"</li>
+      <li>Artist: <a href="https://www.coldplay.com/">Coldplay</a></li>
+      <li>Album: 
+        <a href="https://www.allmusic.com/album/parachutes-mw0000101998">
+          Parachutes
+        </a>
+      </li>
+      <img src="images/Parachutes.jpg" alt="Album Cover" width="75" height="75">
+      <li>Release Date: July 10, 2000</li>
+      <li>Pop; Rock</li>
+    </ul>
+  </div>
+
+  <div class = "song">
+    <ul>
+      <li>Track Name: "One"</li>
+      <li>Artist: <a href="https://www.metallica.com/">Metallica</a></li>
+      <li>Album: 
+        <a href="https://www.allmusic.com/album/and-justice-for-all-mw0000196917">
+          ...And Justice For All
+        </a>
+      </li>
+      <img src="images/AndJusticeForAll.jpg" alt="Album Cover" width="75" height="75">
+      <li>Release Date: September 8, 1988</li>
+      <li>Pop; Rock</li>
     </ul>
   </div>
 
