Added "Trouble" Audio

--- a/lab2/contentcreators-lab2-part3.html
+++ b/lab2/contentcreators-lab2-part3.html
@@ -79,11 +79,11 @@
       <div class="album_cover"><img src="images/Parachutes.jpg" alt="Album Cover"></div>
       <div class="audio">
         <audio controls>
-          <source src="">
+          <source src="audio/Trouble.mp3">
         </audio>
       </div>
     </div>
-  
+
 
     <div id="end">end of list</div>
   </div>
