--- a/lab2/contentcreators-lab2-part3.html
+++ b/lab2/contentcreators-lab2-part3.html
@@ -84,6 +84,30 @@
       </div>
     </div>
 
+    <div class = "song">
+      <div class="track" id=favorite_song>"One"</div>
+      <div class="artist"> <a href="https://www.metallica.com/">Metallica</a></div>
+      <div class="album_name">
+        <a href="https://www.allmusic.com/album/and-justice-for-all-mw0000196917">
+          ...And Justice For All
+        </a>
+      </div>
+      <div class="release_date">
+        September 8, 1988
+      </div>
+      <div class="genres">
+        <ul>
+          <li>Pop</li>
+          <li>Rock</li>
+        </ul>
+      </div>
+      <div class="album_cover"><img src="images/AndJusticeForAll.jpg" alt="Album Cover"></div>
+      <div class="audio">
+        <audio controls>
+          <source src="audio/One.mp3">
+        </audio>
+      </div>
+    </div>
 
     <div id="end">end of list</div>
   </div>
