--- a/lab2/contentcreators-lab2-part1.html
+++ b/lab2/contentcreators-lab2-part1.html
@@ -5,18 +5,19 @@
   <title>Playlist of Ten Favorite Songs</title>
   <h1>Playlist of Ten Favorite Songs</h1>
 
-  <div class ="song">
+  <div class="song">
     <ul>
       <li>Track Name: "If You're Too Shy (Let Me Know)"</li>
       <li>Artist: <a href="https://the1975.com/">the 1975</a></li>
-      <li>Album: <a href="https://www.allmusic.com/album/notes-on-a-conditional-form-mw0003328609">Notes on a Conditional Form</a></li>
+      <li>Album: <a href="https://www.allmusic.com/album/notes-on-a-conditional-form-mw0003328609">Notes on a
+          Conditional Form</a></li>
       <img src="images/NotesOnAConditionalForm.jpg" alt="Album Cover" width="75" height="75">
       <li>Release Date: May 22, 2020</li>
       <li>Genre(s): Pop; Rock; Electronic Pop; Dance</li>
     </ul>
   </div>
 
-  <div class ="song">
+  <div class="song">
     <ul>
       <li>Track Name: "Collar Full"</li>
       <li>Artist: <a href="https://panicatthedisco.com/">Panic! at the Disco</a></li>
@@ -31,11 +32,11 @@
     </ul>
   </div>
 
-  <div class = "song">
+  <div class="song">
     <ul>
       <li>Track Name: "Trouble"</li>
       <li>Artist: <a href="https://www.coldplay.com/">Coldplay</a></li>
-      <li>Album: 
+      <li>Album:
         <a href="https://www.allmusic.com/album/parachutes-mw0000101998">
           Parachutes
         </a>
@@ -46,11 +47,11 @@
     </ul>
   </div>
 
-  <div class = "song">
+  <div class="song">
     <ul>
       <li>Track Name: "One"</li>
       <li>Artist: <a href="https://www.metallica.com/">Metallica</a></li>
-      <li>Album: 
+      <li>Album:
         <a href="https://www.allmusic.com/album/and-justice-for-all-mw0000196917">
           ...And Justice For All
         </a>
@@ -61,5 +62,21 @@
     </ul>
   </div>
 
+  <div class="song">
+    <ul>
+      <li>Track Name: "BLEACH"</li>
+      <li>Artist: <a href="http://brckhmptn.com/">BROCKHAMPTON</a></li>
+      <li>Album:
+        <a href="https://www.allmusic.com/album/saturation-iii-mw0003138632">
+          SATURATION III
+        </a>
+      </li>
+      <img src="images/Brockhampton_-_Saturation_III.png" alt="Album Cover" width="75" height="75">
+      <li>Release Date: September 8, 1988</li>
+      <li>Pop; Rock</li>
+    </ul>
+  </div>
+
 </body>
+
 </html>
