--- a/lab2/contentcreators-lab2-part1.html
+++ b/lab2/contentcreators-lab2-part1.html
@@ -73,7 +73,22 @@
       </li>
       <img src="images/Brockhampton_-_Saturation_III.png" alt="Album Cover" width="75" height="75">
       <li>Release Date: September 8, 1988</li>
-      <li>Pop; Rock</li>
+      <li>Hip Hop; R&amp;B</li>
+    </ul>
+  </div>
+
+  <div class="song">
+    <ul>
+      <li>Track Name: "All I Need"</li>
+      <li>Artist: <a href="https://www.radiohead.com/">Radiohead</a></li>
+      <li>Album:
+        <a href="https://www.allmusic.com/album/in-rainbows-mw0000496930">
+          In Rainbows
+        </a>
+      </li>
+      <img src="images/A1MwaIeBpwL._AC_SL1500_.jpg" alt="Album Cover" width="75" height="75">
+      <li>Release Date: September 8, 1988</li>
+      <li>Alternative Rock</li>
     </ul>
   </div>
 
