All my songs are added now

--- a/lab2/contentcreators-lab2-part3.html
+++ b/lab2/contentcreators-lab2-part3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
   <link rel="stylesheet" href="contentcreators-lab2-part3.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -22,9 +23,45 @@
     </div>
 
     <div class="song">
+      <div class="track" id=favorite_song>"BLEACH"</div>
+      <div class="artist"> <a href="http://brckhmptn.com/">BROCKHAMPTON</a></div>
+      <div class="album_name"><a href="https://www.allmusic.com/album/saturation-iii-mw0003138632">SATURATION III</a>
+      </div>
+      <div class="release_date">December 15, 2017</div>
+      <div class="genres">
+        <ul>
+          <li>Hip Hop</li>
+          <li>R&amp;B</li>
+        </ul>
+      </div>
+      <div class="album_cover"><img src="images/Brockhampton_-_Saturation_III.png" alt="Album Cover"></div>
+      <div class="audio"><audio controls>
+          <source src="audio/BLEACH.mp3">
+        </audio></div>
+    </div>
+
+    <div class="song">
+      <div class="track" id=favorite_song>"All I Need"</div>
+      <div class="artist"> <a href="https://www.radiohead.com/">BROCKHAMPTON</a></div>
+      <div class="album_name"><a href="https://www.allmusic.com/album/in-rainbows-mw0000496930">In Rainbows</a>
+      </div>
+      <div class="release_date">October 10, 2007</div>
+      <div class="genres">
+        <ul>
+          <li>Alternative Rock</li>
+        </ul>
+      </div>
+      <div class="album_cover"><img src="images/A1MwaIeBpwL._AC_SL1500_.jpg" alt="Album Cover"></div>
+      <div class="audio"><audio controls>
+          <source src="audio/All I Need.mp3">
+        </audio></div>
+    </div>
+
+    <div class="song">
       <div class="track" id=favorite_song>"If You're Too Shy (Let Me Know)"</div>
       <div class="artist"> <a href="https://the1975.com/">the 1975</a></div>
-      <div class="album_name"><a href="https://www.allmusic.com/album/notes-on-a-conditional-form-mw0003328609">Notes on a Conditional Form</a></div>
+      <div class="album_name"><a href="https://www.allmusic.com/album/notes-on-a-conditional-form-mw0003328609">Notes on
+          a Conditional Form</a></div>
       <div class="release_date">May 22, 2020</div>
       <div class="genres">
         <ul>
@@ -36,14 +73,16 @@
       </div>
       <div class="album_cover"><img src="images/NotesOnAConditionalForm.jpg" alt="Album Cover"></div>
       <div class="audio"><audio controls>
-        <source src="audio/IfYoureTooShy.mp3">
-      </audio></div>
+          <source src="audio/IfYoureTooShy.mp3">
+        </audio></div>
     </div>
 
     <div class="song">
       <div class="track" id="favorite_song">"Collar Full"</div>
       <div class="artist"> <a href="https://panicatthedisco.com/">Panic! at the Disco</a></div>
-      <div class="album_name"><a href="https://www.allmusic.com/album/too-weird-to-live-too-rare-to-die%21-mw0002565550/releases">Too Weird to Live, Too Rare to Die!</a></div>
+      <div class="album_name"><a
+          href="https://www.allmusic.com/album/too-weird-to-live-too-rare-to-die%21-mw0002565550/releases">Too Weird to
+          Live, Too Rare to Die!</a></div>
       <div class="release_date">October 8, 2013</div>
       <div class="genres">
         <ul>
@@ -59,7 +98,7 @@
       </div>
     </div>
 
-    <div class = "song">
+    <div class="song">
       <div class="track" id=favorite_song>"Trouble"</div>
       <div class="artist"> <a href="https://www.coldplay.com/">Coldplay</a></div>
       <div class="album_name">
@@ -84,7 +123,7 @@
       </div>
     </div>
 
-    <div class = "song">
+    <div class="song">
       <div class="track" id=favorite_song>"One"</div>
       <div class="artist"> <a href="https://www.metallica.com/">Metallica</a></div>
       <div class="album_name">
@@ -113,4 +152,5 @@
   </div>
 
 </body>
+
 </html>
