--- a/lab2/contentcreators-lab2-part3.html
+++ b/lab2/contentcreators-lab2-part3.html
@@ -148,6 +148,56 @@
       </div>
     </div>
 
+    <div class="song">
+      <div class="track" id=favorite_song>"Talking To"</div>
+      <div class="artist"> <a href="https://day6.jype.com/">Day6</a></div>
+      <div class="album_name">
+        <a href="https://www.allmusic.com/album/shoot-me-youth-part-1-mw0003190789">
+          Shoot Me: Youth Part 1
+        </a>
+      </div>
+      <div class="release_date">
+        June 29, 2018
+      </div>
+      <div class="genres">
+        <ul>
+          <li>Pop</li>
+          <li>Rock</li>
+        </ul>
+      </div>
+      <div class="album_cover"><img src="images/Shootmeyouthpart1.jpg.jpg" alt="Album Cover"></div>
+      <div class="audio">
+        <audio controls>
+          <source src="audio/day6 혼잣말 talking to.mp3">
+        </audio>
+      </div>
+    </div>
+
+    <div class="song">
+      <div class="track" id=favorite_song>"Better Better"</div>
+      <div class="artist"> <a href="https://day6.jype.com/">Day6</a></div>
+      <div class="album_name">
+        <a href="https://www.allmusic.com/album/moonrise-mw0003134180">
+          Moonrise
+        </a>
+      </div>
+      <div class="release_date">
+        September 8, 1988
+      </div>
+      <div class="genres">
+        <ul>
+          <li>Pop</li>
+          <li>Rock</li>
+        </ul>
+      </div>
+      <div class="album_cover"><img src="images/Moonrise_(Day6_album)-cover.jpg" alt="Album Cover"></div>
+      <div class="audio">
+        <audio controls>
+          <source src="audio/day6 better better.mp3">
+        </audio>
+      </div>
+    </div>
+
     <div id="end">end of list</div>
   </div>
 
