Added all song contributions

--- a/lab2/contentcreators-lab2-part1.html
+++ b/lab2/contentcreators-lab2-part1.html
@@ -92,6 +92,35 @@
     </ul>
   </div>
 
+  <div class="song">
+    <ul>
+      <li>Track Name: "Talking To"</li>
+      <li>Artist: <a href="https://day6.jype.com/">Day6</a></li>
+      <li>Album:
+        <a href="https://www.allmusic.com/album/shoot-me-youth-part-1-mw0003190789">
+          Shoot Me: Youth Part 1
+        </a>
+      </li>
+      <img src="images/Shootmeyouthpart1.jpg" alt="Album Cover" width="75" height="75">
+      <li>Release Date: June 29, 2018</li>
+      <li>Pop; Rock</li>
+    </ul>
+  </div>
+
+  <div class="song">
+    <ul>
+      <li>Track Name: "Better Better"</li>
+      <li>Artist: <a href="https://day6.jype.com/">Day6</a></li>
+      <li>Album:
+        <a href="https://www.allmusic.com/album/moonrise-mw0003134180">
+          Moonrise
+        </a>
+      </li>
+      <img src="images/Moonrise_(Day6_album)-cover.jpg" alt="Album Cover" width="75" height="75">
+      <li>Release Date: December 6, 2017</li>
+      <li>Pop; Rock</li>
+    </ul>
+  </div>
 </body>
 
 </html>
