fixed album img src for "talking to"

--- a/lab2/contentcreators-lab2-part3.html
+++ b/lab2/contentcreators-lab2-part3.html
@@ -165,7 +165,7 @@
           <li>Rock</li>
         </ul>
       </div>
-      <div class="album_cover"><img src="images/Shootmeyouthpart1.jpg.jpg" alt="Album Cover"></div>
+      <div class="album_cover"><img src="images/Shootmeyouthpart1.jpg" alt="Album Cover"></div>
       <div class="audio">
         <audio controls>
           <source src="audio/day6 혼잣말 talking to.mp3">
