Added last 2 songs to part1

--- a/lab2/contentcreators-lab2-part1.html
+++ b/lab2/contentcreators-lab2-part1.html
@@ -121,6 +121,37 @@
       <li>Pop; Rock</li>
     </ul>
   </div>
+
+  <div class="song">
+    <ul>
+      <li>Track Name: "Narcissist"</li>
+      <li>Artist: <a href="https://noromeworldwide.com/">No Rome ft. the 1975</a></li>
+      <li>Album:
+        <a href="https://www.allmusic.com/artist/no-rome-mn0003757661/biography">
+          RIP Indo Hisashi
+        </a>
+      </li>
+      <img src="images/Narcissist.jpg" alt="Album Cover" width="75" height="75">
+      <li>Release Date: August 28, 2018</li>
+      <li>Alternative; Indie</li>
+    </ul>
+  </div>
+
+  <div class="song">
+    <ul>
+      <li>Track Name: "Cautious"</li>
+      <li>Artist: <a href="https://www.facebook.com/emarosa/">Emarosa</a></li>
+      <li>Album:
+        <a href="https://www.allmusic.com/album/peach-club-mw0003233807">
+          Peach Club
+        </a>
+      </li>
+      <img src="images/Cautious.jpg" alt="Album Cover" width="75" height="75">
+      <li>Release Date: January 28, 2019</li>
+      <li>Rock</li>
+    </ul>
+  </div>
+
 </body>
 
 </html>
