Added TJ's songs in part 3

--- a/lab2/contentcreators-lab2-part3.html
+++ b/lab2/contentcreators-lab2-part3.html
@@ -247,6 +247,55 @@
       </div>
     </div>
 
+    <div class="song">
+      <div class="track" id=favorite_song>"Let It Happen"</div>
+      <div class="artist"> <a href="https://official.tameimpala.com/">Tame Impala</a></div>
+      <div class="album_name">
+        <a href="https://www.allmusic.com/album/currents-mw0002848644">
+          Currents
+        </a>
+      </div>
+      <div class="release_date">
+        July 17, 2015
+      </div>
+      <div class="genres">
+        <ul>
+          <li>Pop</li>
+          <li>Rock</li>
+        </ul>
+      </div>
+      <div class="album_cover"><img src="images/Currents.jpg" alt="Album Cover"></div>
+      <div class="audio">
+        <audio controls>
+          <source src="audio/Let-It-Happen.mp3">
+        </audio>
+      </div>
+    </div>
+
+    <div class="song">
+      <div class="track" id=favorite_song>"Sing About Me, I’m Dying Of Thirst"</div>
+      <div class="artist"> <a href="http://www.kendricklamar.com/">Kendrick Lamar</a></div>
+      <div class="album_name">
+        <a href="https://www.allmusic.com/album/good-kid-maad-city-mw0002421248">
+          Good Kid, M.A.A.D. City
+        </a>
+      </div>
+      <div class="release_date">
+        Octorber 22, 2012
+      </div>
+      <div class="genres">
+        <ul>
+          <li>Rap</li>
+        </ul>
+      </div>
+      <div class="album_cover"><img src="images/Good Kid, M.A.A.D. City.jpg" alt="Album Cover"></div>
+      <div class="audio">
+        <audio controls>
+          <source src="audio//“Sing About Me, I’m Dying Of Thirst”.mp3">
+        </audio>
+      </div>
+    </div>  
+
     <div id="end">end of list</div>
   </div>
 
