replaced some of the divs

--- a/lab2/contentcreators-lab2-part1.html
+++ b/lab2/contentcreators-lab2-part1.html
@@ -5,7 +5,7 @@
   <title>Playlist of Ten Favorite Songs</title>
   <h1>Playlist of Ten Favorite Songs</h1>
 
-  <div class="song">
+  <section class="song">
     <ul>
       <li>Track Name: "If You're Too Shy (Let Me Know)"</li>
       <li>Artist: <a href="https://the1975.com/">the 1975</a></li>
@@ -15,9 +15,9 @@
       <li>Release Date: May 22, 2020</li>
       <li>Genre(s): Pop; Rock; Electronic Pop; Dance</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="song">
+  <section class="song">
     <ul>
       <li>Track Name: "Collar Full"</li>
       <li>Artist: <a href="https://panicatthedisco.com/">Panic! at the Disco</a></li>
@@ -30,9 +30,9 @@
       <li>Release Date: October 8, 2013</li>
       <li>Alternative; Indie</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="song">
+  <section class="song">
     <ul>
       <li>Track Name: "Trouble"</li>
       <li>Artist: <a href="https://www.coldplay.com/">Coldplay</a></li>
@@ -45,9 +45,9 @@
       <li>Release Date: July 10, 2000</li>
       <li>Pop; Rock</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="song">
+  <section class="song">
     <ul>
       <li>Track Name: "One"</li>
       <li>Artist: <a href="https://www.metallica.com/">Metallica</a></li>
@@ -60,9 +60,9 @@
       <li>Release Date: September 8, 1988</li>
       <li>Pop; Rock</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="song">
+  <section class="song">
     <ul>
       <li>Track Name: "BLEACH"</li>
       <li>Artist: <a href="http://brckhmptn.com/">BROCKHAMPTON</a></li>
@@ -75,9 +75,9 @@
       <li>Release Date: December 15, 2017</li>
       <li>Hip Hop; R&amp;B</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="song">
+  <section class="song">
     <ul>
       <li>Track Name: "All I Need"</li>
       <li>Artist: <a href="https://www.radiohead.com/">Radiohead</a></li>
@@ -90,9 +90,9 @@
       <li>Release Date: October 10, 2007</li>
       <li>Alternative Rock</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="song">
+  <section class="song">
     <ul>
       <li>Track Name: "Talking To"</li>
       <li>Artist: <a href="https://day6.jype.com/">Day6</a></li>
@@ -105,9 +105,9 @@
       <li>Release Date: June 29, 2018</li>
       <li>Pop; Rock</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="song">
+  <section class="song">
     <ul>
       <li>Track Name: "Better Better"</li>
       <li>Artist: <a href="https://day6.jype.com/">Day6</a></li>
@@ -120,9 +120,9 @@
       <li>Release Date: December 6, 2017</li>
       <li>Pop; Rock</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="song">
+  <section class="song">
     <ul>
       <li>Track Name: "Narcissist"</li>
       <li>Artist: <a href="https://noromeworldwide.com/">No Rome ft. the 1975</a></li>
@@ -135,9 +135,9 @@
       <li>Release Date: August 28, 2018</li>
       <li>Alternative; Indie</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="song">
+  <section class="song">
     <ul>
       <li>Track Name: "Cautious"</li>
       <li>Artist: <a href="https://www.facebook.com/emarosa/">Emarosa</a></li>
@@ -150,7 +150,7 @@
       <li>Release Date: January 28, 2019</li>
       <li>Rock</li>
     </ul>
-  </div>
+  </section>
 
 </body>
 
