--- a/lab2/contentcreators-lab2-part3.html
+++ b/lab2/contentcreators-lab2-part3.html
@@ -10,7 +10,7 @@
   <title>Playlist of Ten Favorite Songs</title>
   <h1>Playlist of Ten Favorite Songs</h1>
 
-  <div class="list">
+  <article class="list">
 
     <div class="headers">
       <h3 id="track">Track Name</h3>
@@ -22,7 +22,7 @@
       <h3 id="audio">Audio</h3>
     </div>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id=favorite_song>"BLEACH"</div>
       <div class="artist"> <a href="http://brckhmptn.com/">BROCKHAMPTON</a></div>
       <div class="album_name"><a href="https://www.allmusic.com/album/saturation-iii-mw0003138632">SATURATION III</a>
@@ -38,9 +38,9 @@
       <div class="audio"><audio controls>
           <source src="audio/BLEACH.mp3">
         </audio></div>
-    </div>
+    </section>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id=favorite_song>"All I Need"</div>
       <div class="artist"> <a href="https://www.radiohead.com/">BROCKHAMPTON</a></div>
       <div class="album_name"><a href="https://www.allmusic.com/album/in-rainbows-mw0000496930">In Rainbows</a>
@@ -55,9 +55,9 @@
       <div class="audio"><audio controls>
           <source src="audio/All I Need.mp3">
         </audio></div>
-    </div>
+    </section>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id=favorite_song>"If You're Too Shy (Let Me Know)"</div>
       <div class="artist"> <a href="https://the1975.com/">the 1975</a></div>
       <div class="album_name"><a href="https://www.allmusic.com/album/notes-on-a-conditional-form-mw0003328609">Notes on
@@ -75,9 +75,9 @@
       <div class="audio"><audio controls>
           <source src="audio/IfYoureTooShy.mp3">
         </audio></div>
-    </div>
+    </section>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id="favorite_song">"Collar Full"</div>
       <div class="artist"> <a href="https://panicatthedisco.com/">Panic! at the Disco</a></div>
       <div class="album_name"><a
@@ -96,9 +96,9 @@
           <source src="audio/CollarFull.mp3">
         </audio>
       </div>
-    </div>
+    </section>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id=favorite_song>"Trouble"</div>
       <div class="artist"> <a href="https://www.coldplay.com/">Coldplay</a></div>
       <div class="album_name">
@@ -121,9 +121,9 @@
           <source src="audio/Trouble.mp3">
         </audio>
       </div>
-    </div>
+    </section>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id=favorite_song>"One"</div>
       <div class="artist"> <a href="https://www.metallica.com/">Metallica</a></div>
       <div class="album_name">
@@ -146,9 +146,9 @@
           <source src="audio/One.mp3">
         </audio>
       </div>
-    </div>
+    </section>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id=favorite_song>"Talking To"</div>
       <div class="artist"> <a href="https://day6.jype.com/">Day6</a></div>
       <div class="album_name">
@@ -171,9 +171,9 @@
           <source src="audio/TalkingTo.mp3">
         </audio>
       </div>
-    </div>
+    </section>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id=favorite_song>"Better Better"</div>
       <div class="artist"> <a href="https://day6.jype.com/">Day6</a></div>
       <div class="album_name">
@@ -196,9 +196,9 @@
           <source src="audio/day6 better better.mp3">
         </audio>
       </div>
-    </div>
+    </section>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id=favorite_song>"Narcissist"</div>
       <div class="artist"> <a href="https://noromeworldwide.com/">No Rome ft. the 1975</a></div>
       <div class="album_name">
@@ -221,9 +221,9 @@
           <source src="audio/Narcissist.mp3">
         </audio>
       </div>
-    </div>
+    </section>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id=favorite_song>"Cautious"</div>
       <div class="artist"> <a href="https://www.facebook.com/emarosa/">Emarosa</a></div>
       <div class="album_name">
@@ -245,9 +245,9 @@
           <source src="audio/Cautious.mp3">
         </audio>
       </div>
-    </div>
+    </section>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id=favorite_song>"Let It Happen"</div>
       <div class="artist"> <a href="https://official.tameimpala.com/">Tame Impala</a></div>
       <div class="album_name">
@@ -270,9 +270,9 @@
           <source src="audio/Let-It-Happen.mp3">
         </audio>
       </div>
-    </div>
+    </section>
 
-    <div class="song">
+    <section class="song">
       <div class="track" id=favorite_song>"Sing About Me, I’m Dying Of Thirst"</div>
       <div class="artist"> <a href="http://www.kendricklamar.com/">Kendrick Lamar</a></div>
       <div class="album_name">
@@ -294,10 +294,10 @@
           <source src="audio//“Sing About Me, I’m Dying Of Thirst”.mp3">
         </audio>
       </div>
-    </div>  
+    </section>
 
     <div id="end">end of list</div>
-  </div>
+  </article>
 
 </body>
 
