commented out two songs

--- a/lab2/contentcreators-lab2-part3.html
+++ b/lab2/contentcreators-lab2-part3.html
@@ -247,7 +247,7 @@
       </div>
     </section>
 
-    <section class="song">
+    <!-- <section class="song">
       <div class="track" id=favorite_song>"Let It Happen"</div>
       <div class="artist"> <a href="https://official.tameimpala.com/">Tame Impala</a></div>
       <div class="album_name">
@@ -297,7 +297,7 @@
     </section>
 
     <div id="end">end of list</div>
-  </article>
+  </article> -->
 
 </body>
 
