simple additions added

--- a/lab3/resumes/wildg.html
+++ b/lab3/resumes/wildg.html
@@ -8,12 +8,20 @@
 </head>
 
 <body>
-    <h1>
-        Gabriel Wild
-    </h1>
-    <ul id="">
-        <li></li>
-    </ul>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>
+                    Gabriel Wild
+                </h1>
+            </div>
+            <div class="col text-right">
+                <ul class="">
+
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
