progress on my resume

--- a/lab3/resumes/wildg.html
+++ b/lab3/resumes/wildg.html
@@ -5,23 +5,71 @@
     <title> Gabriel Wild Resume </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style.css" />
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>
-                    Gabriel Wild
-                </h1>
-            </div>
-            <div class="col text-right">
-                <ul class="">
+    <h1 class="name">
+        Gabriel Wild
+    </h1>
+    <ul class="list-group list-group-horizontal justify-content-around ">
+        <li class="list-group-item">
+            2316 Ronda Vista Dr. Los Angeles CA, 90027
+        </li>
+        <li class="list-group-item">
+            <a href="mailto:gabewild37gmail.com">gabewild37@gmail.com</a>
+        </li>
+        <li class="list-group-item">
+            (323) 708-9229
+        </li>
+    </ul>
+    <img src=" ../images/temporary.jpeg" alt="Profile Photo" class="profilePhoto">
 
-                </ul>
-            </div>
-        </div>
+    <div class="Summary">
+
+        <h2>
+            Summary
+        </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut consequatur deserunt corrupti, harum magni amet
+            distinctio sit nulla quisquam odio numquam, est laudantium omnis quos perspiciatis cum recusandae fugiat
+            quae.
+        </p>
     </div>
+
+    <div class="Education">
+        <h2>
+            Education
+        </h2>
+        <h3>
+            <a href="https://rpi.edu">
+                Rensselaer Polytechnic Institute
+            </a>
+            <i> - Bachelor of Science</i>
+        </h3>
+        <h4>
+            August 2017 - December 2021
+        </h4>
+        <ul>
+            <li>
+                Computer Science/ Information Technology and Web Science
+            </li>
+
+        </ul>
+        <h3>
+            <a href="#">
+                Loyola High School, Los Angeles
+            </a>
+            <i> - High School Diploma</i>
+        </h3>
+        <h4>
+            September 2013 - June 2017
+        </h4>
+    </div>
+
+    <div>
+
+    </div>
+
 </body>
 
 </html>
