--- a/lab3/resumes/wildg.html
+++ b/lab3/resumes/wildg.html
@@ -12,7 +12,7 @@
     <h1 class="name">
         Gabriel Wild
     </h1>
-    <ul class="list-group list-group-horizontal justify-content-around ">
+    <ul class="list-group list-group-horizontal justify-content-left ">
         <li class="list-group-item">
             2316 Ronda Vista Dr. Los Angeles CA, 90027
         </li>
@@ -36,39 +36,86 @@
         </p>
     </div>
 
+    <div class="Skills">
+        <h2>
+            Skills
+        </h2>
+    </div>
+
     <div class="Education">
         <h2>
             Education
         </h2>
-        <h3>
-            <a href="https://rpi.edu">
-                Rensselaer Polytechnic Institute
-            </a>
-            <i> - Bachelor of Science</i>
-        </h3>
-        <h4>
-            August 2017 - December 2021
-        </h4>
-        <ul>
-            <li>
-                Computer Science/ Information Technology and Web Science
-            </li>
+        <div class="education-item">
+            <h3>
+                <a href="https://rpi.edu">
+                    Rensselaer Polytechnic Institute
+                </a>
+                <i> - Bachelor of Science</i>
+            </h3>
+            <h4>
+                August 2017 - December 2021
+            </h4>
+            <ul>
+                <li>
+                    Computer Science/ Information Technology and Web Science
+                </li>
 
-        </ul>
-        <h3>
-            <a href="#">
-                Loyola High School, Los Angeles
-            </a>
-            <i> - High School Diploma</i>
-        </h3>
-        <h4>
-            September 2013 - June 2017
-        </h4>
+            </ul>
+        </div>
+        <div class="education-item">
+            <h3>
+                <a href="#">
+                    Loyola High School, Los Angeles
+                </a>
+                <i> - High School Diploma</i>
+            </h3>
+            <h4>
+                September 2013 - June 2017
+            </h4>
+        </div>
     </div>
 
-    <div>
-
+    <div class="Experience">
+        <h2>
+            Experience
+        </h2>
+        <div class="experience-item">
+            <h3>
+                <a href="#">
+                    LACA Dermatology
+                </a>
+                <i> - Medical Receptionist</i>
+            </h3>
+            <h4>
+                July 2020 - August 2020
+            </h4>
+        </div>
+        <div class="experience-item">
+            <h3>
+                <a href="#">
+                    LACA Dermatology
+                </a>
+                <i> - Medical Receptionist</i>
+            </h3>
+            <h4>
+                July 2020 - August 2020
+            </h4>
+        </div>
+        <div class="experience-item">
+            <h3>
+                <a href="#">
+                    LACA Dermatology
+                </a>
+                <i> - Medical Receptionist</i>
+            </h3>
+            <h4>
+                July 2020 - August 2020
+            </h4>
+        </div>
     </div>
+
+
 
 </body>
 
