Finished with html structure and basic css styling

--- a/lab3/resumes/wildg.html
+++ b/lab3/resumes/wildg.html
@@ -12,7 +12,7 @@
     <h1 class="name">
         Gabriel Wild
     </h1>
-    <ul class="list-group list-group-horizontal justify-content-left ">
+    <ul class="list-group list-group-horizontal justify-content-left">
         <li class="list-group-item">
             2316 Ronda Vista Dr. Los Angeles CA, 90027
         </li>
@@ -20,7 +20,7 @@
             <a href="mailto:gabewild37gmail.com">gabewild37@gmail.com</a>
         </li>
         <li class="list-group-item">
-            (323) 708-9229
+            (323) 708 - 9229
         </li>
     </ul>
     <img src=" ../images/temporary.jpeg" alt="Profile Photo" class="profilePhoto">
@@ -40,6 +40,66 @@
         <h2>
             Skills
         </h2>
+        <div class="row">
+            <div class="col-6">
+                Relevant Programming Experience
+                <ul>
+                    <li>
+                        3 yrs of College Level Programming
+                    </li>
+                    <li>
+                        C, C++, Python, Java, Javascript, HTML/CSS, MySQL, PHP, jQuery, XML
+                    </li>
+                    <li>
+                        Web App Development and Open Source experience (see github)
+                    </li>
+                </ul>
+                Other skills
+                <ul>
+                    <li>
+                        LaTeX, Microsoft Word/Excel, Google Docs, Pages, etc.
+                    </li>
+                </ul>
+            </div>
+            <div class="col-6">
+                Relevant College Classes
+                <ul>
+                    <li>
+                        Data Structures - Spring 2018
+                    </li>
+                    <li>
+                        Computer Organization - Fall 2018
+                    </li>
+                    <li>
+                        Foundations of Computer Science - Fall 2018
+                    </li>
+                    <li>
+                        Introduction to Algorithms - Spring 2019
+                    </li>
+                    <li>
+                        Graph Theory - Summer 2019
+                    </li>
+                    <li>
+                        Operating Systems - Summer 2019
+                    </li>
+                    <li>
+                        Open Source Software - Summer 2019
+                    </li>
+                    <li>
+                        Managing IT Resources - Fall 2020
+                    </li>
+                    <li>
+                        Database Systems - Fall 2020
+                    </li>
+                    <li>
+                        Web Systems Development - Fall 2020
+                    </li>
+                    <li>
+                        Programming Languages - Fall 2020
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <div class="Education">
