--- a/lab3/index.html
+++ b/lab3/index.html
@@ -39,29 +39,39 @@
   <div class="bottomPhrase"><p>Profiles</p></div>
   <div class = "profiles">
     <div id="profile1">
-      <img src="images/questionMark.png" alt="Mock Up">
-      <h3>Derek Li</h3>
-      <p>include a description and one tiny mock-up for each previous work</p>
+      <a href="#">
+        <img src="images/questionMark.png" alt="Mock Up">
+        <h3>Derek Li</h3>
+        <p>include a description and one tiny mock-up for each previous work</p>
+      </a>
     </div>
     <div id="profile2">
-      <img src="images/questionMark.png" alt="Mock Up">
-      <h3>Gabriel Wild</h3>
-      <p>include a description and one tiny mock-up for each previous work</p>
+      <a href="resumes/wildg.html">
+        <img src="images/questionMark.png" alt="Mock Up">
+        <h3>Gabriel Wild</h3>
+        <p>include a description and one tiny mock-up for each previous work</p>
+      </a>
     </div>
     <div id="profile3">
-      <img src="images/questionMark.png" alt="Mock Up">
-      <h3>Kyle Qin</h3>
-      <p>include a description and one tiny mock-up for each previous work</p>
+      <a href="resumes/qinz.html">
+        <img src="images/Kyle.jpg" alt="Mock Up">
+        <h3>Kyle Qin</a></h3>
+        <p>include a description and one tiny mock-up for each previous work</p>
+      </a>
     </div>
     <div id="profile4">
-      <img src="images/questionMark.png" alt="Mock Up">
-      <h3>Tyler Samuels</h3>
-      <p>include a description and one tiny mock-up for each previous work</p>
+      <a href="#">
+        <img src="images/questionMark.png" alt="Mock Up">
+        <h3>Tyler Samuels</h3>
+        <p>include a description and one tiny mock-up for each previous work</p>
+      </a>
     </div>
     <div id="profile5">
-      <img src="images/Virginia.jpg" alt="Mock Up">
-      <h3>Virginia Barnes</h3>
-      <p>include a description and one tiny mock-up for each previous work</p>
+      <a href="resumes/barnev.html">
+        <img src="images/Virginia.jpg" alt="Mock Up">
+        <h3>Virginia Barnes</h3>
+        <p>include a description and one tiny mock-up for each previous work</p>
+      </a>
     </div>
   </div>
 
