--- a/lab3/index.html
+++ b/lab3/index.html
@@ -29,9 +29,9 @@
       <p>Include a description and one tiny mock-up for each previous work</p>
     </div>
     <div id="example3">
-      <img src="images/questionMark.png" alt="Mock Up">
-      <h3>Previous Work 3.</h3>
-      <p>Include a description and one tiny mock-up for each previous work</p>
+      <img src="images/region.png" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;"">
+      <h3>Region, find peers who share your interests.</h3>
+      <p>A Social Media Web Application</p>
     </div>
   </div>
 
@@ -55,8 +55,13 @@
     <div id="profile3">
       <a href="resumes/qinz.html">
         <img src="images/Kyle.jpg" alt="Mock Up">
-        <h3>Kyle Qin</a></h3>
-        <p>include a description and one tiny mock-up for each previous work</p>
+        <h3>Kyle Qin</h3>
+        <p>
+          Software Engineer
+        </p>
+        <p>
+          Web Developer
+        </p>
       </a>
     </div>
     <div id="profile4">
