added tylers link on indexl, fixed minor css bug

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -65,7 +65,7 @@
       </a>
     </div>
     <div id="profile4">
-      <a href="#">
+      <a href="resumes/SamuelsResume.html">
         <img src="images/questionMark.png" alt="Mock Up">
         <h3>Tyler Samuels</h3>
         <p>include a description and one tiny mock-up for each previous work</p>
