validated and formated index page, added tyler's

--- a/lab3/resumes/samuet.html
+++ b/lab3/resumes/samuet.html
@@ -23,7 +23,7 @@
             (443) 608 - 4907
         </li>
     </ul>
-    <img src=" ../images/TJ.jpeg" alt="Profile Photo" class="profilePhoto">
+    <img src=" ../images/Tyler.jpg" alt="Profile Photo" class="profilePhoto">
 
     <div class="Summary">
 
