--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,84 +1,110 @@
 <!DOCTYPE HTML>
 <html>
 
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&display=swap" rel="stylesheet">
-  </head>
+<head>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&display=swap" rel="stylesheet">
+  <title>Content Creators Profolio</title>
+</head>
 
-  <body><div id="homepage">
-  <title>Online Portfolio</title>
+<body>
 
-  <div class="header">
-    <h1>We are Content Creators.</h1>
-    <p>Creating content for the web one application at a time.</p>
+  <div id="homepage">
+
+    <div class="header">
+      <h1>We are Content Creators.</h1>
+      <p>Creating content for the web one application at a time.</p>
+    </div>
+
+    <div class="topPhrase">
+      <p>WORKS</p>
+    </div>
+
+    <div class="bottomPhrase">
+      <p>Portfolio</p>
+    </div>
+
+    <div class="examples">
+
+      <div id="example1">
+        <img src="images/questionMark.png" alt="Mock Up">
+        <h3>Previous Work 1.</h3>
+        <p>Include a description and one tiny mock-up for each previous work</p>
+      </div>
+
+      <div id="example2">
+        <img src="images/questionMark.png" alt="Mock Up">
+        <h3>Previous Work 2.</h3>
+        <p>Include a description and one tiny mock-up for each previous work</p>
+      </div>
+
+      <div id="example3">
+        <img src="images/region.png" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;">
+        <h3>Region, find peers who share your interests.</h3>
+        <p>A Social Media Web Application</p>
+      </div>
+
+    </div>
+
+    <div class="topPhrase">
+      <p>TEAM</p>
+    </div>
+
+    <div class="bottomPhrase">
+      <p>Profiles</p>
+    </div>
+
+    <div class="profiles">
+
+      <div id="profile1">
+        <a href="#">
+          <img src="images/questionMark.png" alt="Mock Up">
+          <h3>Derek Li</h3>
+          <p>include a description and one tiny mock-up for each previous work</p>
+        </a>
+      </div>
+
+      <div id="profile2">
+        <a href="resumes/wildg.html">
+          <img src="images/temporary.jpeg" alt="Mock Up">
+          <h3>Gabriel Wild</h3>
+          <p>include a description and one tiny mock-up for each previous work</p>
+        </a>
+      </div>
+
+      <div id="profile3">
+        <a href="resumes/qinz.html">
+          <img src="images/Kyle.jpg" alt="Mock Up">
+          <h3>Kyle Qin</h3>
+          <p>
+            Software Engineer
+          </p>
+          <p>
+            Web Developer
+          </p>
+        </a>
+      </div>
+
+      <div id="profile4">
+        <a href="resumes/samuet.html">
+          <img src="images/Tyler.jpg" alt="Mock Up">
+          <h3>Tyler Samuels</h3>
+          <p>include a description and one tiny mock-up for each previous work</p>
+        </a>
+      </div>
+
+      <div id="profile5">
+        <a href="resumes/barnev.html">
+          <img src="images/Virginia.jpg" alt="Mock Up">
+          <h3>Virginia Barnes</h3>
+          <p>include a description and one tiny mock-up for each previous work</p>
+        </a>
+      </div>
+
+    </div>
   </div>
 
-  <div class="topPhrase"><p>WORKS</p></div>
-  <div class="bottomPhrase"><p>Portfolio</p></div>
-  <div class = "examples">
-    <div id="example1">
-      <img src="images/questionMark.png" alt="Mock Up">
-      <h3>Previous Work 1.</h3>
-      <p>Include a description and one tiny mock-up for each previous work</p>
-    </div>
-    <div id="example2">
-      <img src="images/questionMark.png" alt="Mock Up">
-      <h3>Previous Work 2.</h3>
-      <p>Include a description and one tiny mock-up for each previous work</p>
-    </div>
-    <div id="example3">
-      <img src="images/region.png" alt="Mock Up" style="height: 30%; margin-top: 20%; margin-bottom: 10%;"">
-      <h3>Region, find peers who share your interests.</h3>
-      <p>A Social Media Web Application</p>
-    </div>
-  </div>
+</body>
 
-  <div class="topPhrase"><p>TEAM</p></div>
-  <div class="bottomPhrase"><p>Profiles</p></div>
-  <div class = "profiles">
-    <div id="profile1">
-      <a href="#">
-        <img src="images/questionMark.png" alt="Mock Up">
-        <h3>Derek Li</h3>
-        <p>include a description and one tiny mock-up for each previous work</p>
-      </a>
-    </div>
-    <div id="profile2">
-      <a href="resumes/wildg.html">
-        <img src="images/questionMark.png" alt="Mock Up">
-        <h3>Gabriel Wild</h3>
-        <p>include a description and one tiny mock-up for each previous work</p>
-      </a>
-    </div>
-    <div id="profile3">
-      <a href="resumes/qinz.html">
-        <img src="images/Kyle.jpg" alt="Mock Up">
-        <h3>Kyle Qin</h3>
-        <p>
-          Software Engineer
-        </p>
-        <p>
-          Web Developer
-        </p>
-      </a>
-    </div>
-    <div id="profile4">
-      <a href="resumes/SamuelsResume.html">
-        <img src="images/questionMark.png" alt="Mock Up">
-        <h3>Tyler Samuels</h3>
-        <p>include a description and one tiny mock-up for each previous work</p>
-      </a>
-    </div>
-    <div id="profile5">
-      <a href="resumes/barnev.html">
-        <img src="images/Virginia.jpg" alt="Mock Up">
-        <h3>Virginia Barnes</h3>
-        <p>include a description and one tiny mock-up for each previous work</p>
-      </a>
-    </div>
-  </div>
-
-</div></body>
 </html>
