added h2 tag to accomplishment

--- a/lab3/resumes/barnev.html
+++ b/lab3/resumes/barnev.html
@@ -64,7 +64,7 @@
                 </ul>
             </div>
             <div class="col-6">
-                Accomplishments
+                <h2>Accomplishments</h2>
                 <ul>
                     <li>
                         Product Institute Certification in JnJ Product Management
