--- a/lab3/resumes/qinz.html
+++ b/lab3/resumes/qinz.html
@@ -134,7 +134,7 @@
     </div>
     <div class="education-item">
       <h3>
-        <a href="#">
+        <a href="http://www.sdsyfz.edu.cn:8100/english/index.html">
           The Affiliated High School Of Shenzhen University, Shenzhen, China
         </a>
         <i> - High School Diploma</i>
@@ -157,7 +157,7 @@
         <i> - Software Intern, Intelligent Video Analytics</i>
       </h3>
       <h4>
-        June 2019 - September 2019
+        June 2020 - September 2020
       </h4>
       <ul>
         <li>
@@ -171,41 +171,35 @@
     </div>
     <div class="experience-item">
       <h3>
-        <a href="https://www.nvidia.com/en-us/">
-          Nvidia
+        <a href="https://rpi.edu">
+          Rensselaer Polytechnic Institute
         </a>
-        <i> - Software Intern, Intelligent Video Analytics</i>
+        <i> - CSCI 1200 Data Structures Mentor</i>
       </h3>
       <h4>
-        June 2019 - September 2019
+        September 2019 - December 2019
       </h4>
       <ul>
         <li>
-          Worked with the early prototyping of Computer Vision/Deep Learning based solutions for Intelligent Video
-          Analytics.
-        </li>
-        <li>
-          Partnered with the team on deep learning models (CNN/RNN/LSTM etc.)
+          Worked as a mentor in Data Structures lab, helped students with fundamental data
+          structures and algorithms problems in C++ language.
         </li>
       </ul>
     </div>
     <div class="experience-item">
       <h3>
-        <a href="https://www.nvidia.com/en-us/">
-          Nvidia
+        <a href="https://rpi.edu">
+          Rensselaer Polytechnic Institute
         </a>
-        <i> - Software Intern, Intelligent Video Analytics</i>
+        <i> - CSCI 1200 Data Structures Mentor</i>
       </h3>
       <h4>
-        June 2019 - September 2019
+        September 2019 - December 2019
       </h4>
       <ul>
         <li>
-          Worked with the early prototyping of Computer Vision/Deep Learning based solutions for Intelligent Video
-          Analytics.
-        </li>
-        <li>
-          Partnered with the team on deep learning models (CNN/RNN/LSTM etc.)
+          Worked as a mentor in Data Structures lab, helped students with fundamental data
+          structures and algorithms problems in C++ language.
         </li>
       </ul>
     </div>
