--- a/lab3/resumes/wildg.html
+++ b/lab3/resumes/wildg.html
@@ -125,7 +125,7 @@
         </div>
         <div class="education-item">
             <h3>
-                <a href="#">
+                <a href="https://www.loyolahs.edu/">
                     Loyola High School, Los Angeles
                 </a>
                 <i> - High School Diploma</i>
@@ -142,7 +142,7 @@
         </h2>
         <div class="experience-item">
             <h3>
-                <a href="#">
+                <a href="http://www.lacadermatology.com/">
                     LACA Dermatology
                 </a>
                 <i> - Medical Receptionist</i>
@@ -153,7 +153,7 @@
         </div>
         <div class="experience-item">
             <h3>
-                <a href="#">
+                <a href="https://www.lafoodbank.org/">
                     LARF(Los Angeles Regional Food Bank)
                 </a>
                 <i> - Volunteer</i>
@@ -164,7 +164,7 @@
         </div>
         <div class="experience-item">
             <h3>
-                <a href="#">
+                <a href="https://www.guidedogsofamerica.org/">
                     GDA (Guide Dogs of America)
                 </a>
                 <i> - Volunteer</i>
