updated image links

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -67,7 +67,7 @@
 
       <div id="profile2">
         <a href="resumes/wildg.html">
-          <img src="images/temporary.jpeg" alt="Mock Up">
+          <img src="images/wildg.jpg" alt="Mock Up">
           <h3>Gabriel Wild</h3>
           <p>include a description and one tiny mock-up for each previous work</p>
         </a>
