--- a/lab3/resumes/wildg.html
+++ b/lab3/resumes/wildg.html
@@ -23,7 +23,7 @@
             (323) 708 - 9229
         </li>
     </ul>
-    <img src=" ../images/temporary.jpeg" alt="Profile Photo" class="profilePhoto">
+    <img src=" ../images/wildg.jpg" alt="Profile Photo" class="profilePhoto">
 
     <div class="Summary">
 
