fixed issue where images were getting squashed out of proportion

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -69,7 +69,8 @@
         <a href="resumes/wildg.html">
           <img src="images/wildg.jpg" alt="Mock Up">
           <h3>Gabriel Wild</h3>
-          <p>include a description and one tiny mock-up for each previous work</p>
+          <p>Software Engineer</p>
+          <p>Web Developer</p>
         </a>
       </div>
 
